--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-
+version: '3.8'
 
 services:
   backend:
@@ -26,6 +26,17 @@ services:
       POSTGRES_PASSWORD: account_pass
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/nginx/ssl  # Mount SSL certificates here
+    depends_on:
+      - backend
 
 volumes:
   postgres_data:
