--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build: .
@@ -27,18 +25,18 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro  # Mount NGINX configuration
-      - ./ssl/cert.crt:/etc/nginx/ssl/cert.crt:ro           # SSL certificate
-      - ./ssl//private.key:/etc/nginx/ssl/private.key:ro     # SSL private key
-    depends_on:
-      - backend
+  # Uncomment this block when you need Nginx for production or testing
+  # nginx:
+  #   image: nginx:latest
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro  # Mount NGINX configuration
+  #     - ./ssl/cert.crt:/etc/nginx/ssl/cert.crt:ro      # SSL certificate
+  #     - ./ssl/private.key:/etc/nginx/ssl/private.key:ro # SSL private key
+  #   depends_on:
+  #     - backend
 
 volumes:
   postgres_data:
-
